--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Denis' Personal Site</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="./images/Denis.png" alt="Photo With Me" width="200"></td>
+        <td><img src="./Images/Denis.png" alt="Photo With Me" width="200"></td>
         <td>
           <h1>Denis</h1>
           <p>Hi there! I'm Denis, <strong>Unity and Web Developer.</strong></p>
@@ -38,7 +39,7 @@
       </tbody>
     </table>
     <hr>
-    <h2>Skills</h2>
+    <h3>Skills</h3>
     <table>
       <!-- <thead>
 
@@ -75,7 +76,7 @@
       </tfoot> -->
     </table>
     <hr>
-    <h4>Web Dev Resources</h4>
+    <h3>Web Dev Resources</h3>
     <ul>
       <li><a href="https://www.w3schools.com">W3 Schools</a></li>
       <li><a href="https://developer.mozilla.org/en-US/">Mozilla Development Network</a></li>
