--- a/index.html
+++ b/index.html
@@ -1,89 +1,59 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Denis' Personal Site</title>
+    <title>Denis Ilie</title>
     <link rel="stylesheet" href="./css/styles.css">
-  </head>
+    <link rel="icon" href="./favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@800&family=Sacramento&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+   </head>
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="./Images/Denis.png" alt="Photo With Me" width="200"></td>
-        <td>
-          <h1>Denis</h1>
-          <p>Hi there! I'm Denis, <strong>Unity and Web Developer.</strong></p>
-          <p><strong>17</strong> Years Old</p>
-          <p><em>Student</em> at <strong>Colegiul Spiru Haret Ploiesti</strong></p>
-        </td>
-      </tr>
-    </table>
+  <div class="top-container">
+    <img class="top-cloud" src="./Images/cloud.png" alt="cloud-img">
+    <h1>I'm Denis.</h1>
+    <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p>
+    <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
+    <img class="mountain-img"src="./Images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-picture"src="./Images/Denis_Profile.png" alt="Profile-Picture">
+      <h2>Hello.</h2>
+      <p>I am a Web Developer.I like making games and cycling.</p>
+    </div>
     <hr>
-    <h3>Work Experience</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2020</td>
-          <td>Indie Unity Development - C#</td>
-        </tr>
-        <tr>
-          <td>2020-2021</td>
-          <td>Web Development - Freelancing</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill-image" src="./Images/skills-code.png" alt="skill-image">
+        <h3>Design & Development</h3>
+        <p class="skill-text">My journey started when I was really young, due to my passion for games since I was little.</p>
+        <p class="skill-text">It was the thing that made me get into Game Development, and, later on, Web Development.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill-image" src="./Images/skills-video-editing.png" alt="skill-image">
+        <h3>Photo & Video Editing</h3>
+        <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effect, Photoshop and more.</p>
+      </div>
+    </div>
     <hr>
-    <h3>Skills</h3>
-    <table>
-      <!-- <thead>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>I am currently available for freelance work.</h3>
+      <p>If you have a project that you'd want to discuss about, or get in touch with me, you can do it below.</p>
+      <a class="btn" href="mailto:denisilie2@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
-      </thead> -->
-      <tbody>
-        <tr>
-          <td>HTML5</td>
-          <td>⭐	⭐	⭐	⭐</td>
-        </tr>
-        <tr>
-          <td>CSS3</td>
-          <td>⭐	⭐	⭐</td>
-        </tr>
-        <tr>
-          <td>Video Editing</td>
-          <td>⭐	⭐	⭐ ⭐</td>
-        </tr>
-        </td>
-        <tr>
-          <td>Unity</td>
-          <td>⭐	⭐	⭐	⭐</td>
-        </tr>
-        <tr>
-          <td>C#</td>
-          <td>⭐	⭐	⭐</td>
-        </tr>
-        <tr>
-          <td>Photo Editing</td>
-          <td>⭐	⭐	⭐	⭐</td>
-        </tr>
-      </tbody>
-      <!-- <tfoot>
 
-      </tfoot> -->
-    </table>
-    <hr>
-    <h3>Web Dev Resources</h3>
-    <ul>
-      <li><a href="https://www.w3schools.com">W3 Schools</a></li>
-      <li><a href="https://developer.mozilla.org/en-US/">Mozilla Development Network</a></li>
-      <li><a href="https://devdocs.io">Dev Docs</a></li>
-      <li><a href="https://unicode.org/emoji/charts/full-emoji-list.html">Unicode Emoji's</a></li>
-    </ul>
-    <hr>
-    <a href="contact.html">Contact Me</a>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://github.com/denissuu">Github</a>
+    <a class="footer-link" href="https://www.instagram.com/deniss.ilie">Instagram</a>
+    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob">Steam</a>
+    <p>© 2021 Denis Ilie.</p>
+  </div>
+
   </body>
 </html>
