--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <h2>Hello.</h2>
       <p>I am a Web Developer.I like making games and cycling.</p>
     </div>
-    <hr>
+    <div class="section-separator"></div>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2 class="my-skills-text">My Skills.</h2>
       <div class="skill-row">
         <img class="skill-image" src="./Images/skills-code.png" alt="skill-image">
         <h3>Design & Development</h3>
@@ -38,22 +38,25 @@
         <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effect, Photoshop and more.</p>
       </div>
     </div>
-    <hr>
+  </div>
+    <div class="section-separator"></div>
+    <div class="footer-area">
     <div class="contact-me">
-      <h2>Get In Touch</h2>
+      <h2 class="get-in-touch">Get In Touch</h2>
+      <span class="contact-text">
       <h3>I am currently available for freelance work.</h3>
       <p>If you have a project that you'd want to discuss about, or get in touch with me, you can do it below.</p>
+      </span>
       <a class="btn" href="mailto:denisilie2@gmail.com">CONTACT ME</a>
     </div>
-  </div>
 
 
-  <div class="bottom-container">
+    <div class="bottom-container">
     <a class="footer-link" href="https://github.com/denissuu">Github</a>
     <a class="footer-link" href="https://www.instagram.com/deniss.ilie">Instagram</a>
     <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob">Steam</a>
-    <p>© 2021 Denis Ilie.</p>
+    <p class="copyright-text">© 2021 Denis Ilie</p>
   </div>
-
+  </div>
   </body>
 </html>
