--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p>
     <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
     <img class="mountain-img"src="./Images/mountain.png" alt="mountain-img">
+    <img class="mountain-img-hidden"src="./Images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -35,7 +36,7 @@
       <div class="skill-row">
         <img class="skill-image" src="./Images/skills-video-editing.png" alt="skill-image">
         <h3>Photo & Video Editing</h3>
-        <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effect, Photoshop and more.</p>
+        <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effects, Photoshop and more.</p>
       </div>
     </div>
   </div>
