Updated Website Landing
Changed the mountains theme to something more dark-themed.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
    </head>
   <body>
   <div class="top-container">
-    <img class="top-cloud" src="./Images/cloud.png" alt="cloud-img">
+    <img class="top-container-img" src="./Images/top-container-img.png" alt="background-image">
+    <!-- <img class="top-cloud" src="./Images/cloud.png" alt="cloud-img"> -->
     <h1>I'm Denis.</h1>
     <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p>
-    <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
+    <!-- <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
     <img class="mountain-img"src="./Images/mountain.png" alt="mountain-img">
-    <img class="mountain-img-hidden"src="./Images/mountain.png" alt="mountain-img">
+    <img class="mountain-img-hidden"src="./Images/mountain.png" alt="mountain-img"> -->
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -40,7 +41,9 @@
       </div>
     </div>
   </div>
-    <div class="section-separator"></div>
+    <div class="section-separator-container">
+        <div class="section-separator"></div>
+    </div>
     <div class="footer-area">
     <div class="contact-me">
       <h2 class="get-in-touch">Get In Touch</h2>
