--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
    </head>
   <body>
   <div class="top-container">
-    <img class="top-container-img" src="./Images/top-container-img.png" alt="background-image">
+    <p class="top-container-text">
+      Navigation Bar Coming Soon!
+    </p>
     <!-- <img class="top-cloud" src="./Images/cloud.png" alt="cloud-img"> -->
-    <h1>I'm Denis.</h1>
-    <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p>
+    <!-- <h1>I'm Denis.</h1>
+    <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p> -->
     <!-- <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
     <img class="mountain-img"src="./Images/mountain.png" alt="mountain-img">
     <img class="mountain-img-hidden"src="./Images/mountain.png" alt="mountain-img"> -->
@@ -22,7 +24,7 @@
   <div class="middle-container">
     <div class="profile">
       <img class="profile-picture"src="./Images/Denis_Profile.png" alt="Profile-Picture">
-      <h2>Hello.</h2>
+      <h2>Hello, I'm Denis.</h2>
       <p>I am a Web Developer.I like making games and cycling.</p>
     </div>
     <div class="section-separator"></div>
@@ -59,7 +61,10 @@
     <a class="footer-link" href="https://github.com/denissuu">Github</a>
     <a class="footer-link" href="https://www.instagram.com/deniss.ilie">Instagram</a>
     <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob">Steam</a>
-    <p class="copyright-text">© 2021 Denis Ilie</p>
+    <div class="copyright-text-container">
+      <p class="copyright-text">© 2021 Denis Ilie</p>
+    </div>
+    <!-- <img class="bottom-container-img" src="./Images/top-container-img.png" alt="background-image"> -->
   </div>
   </div>
   </body>
