--- a/index.html
+++ b/index.html
@@ -31,36 +31,33 @@
     <div class="skills">
       <h2 class="my-skills-text">My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-image" src="./Images/skills-code.png" alt="skill-image">
+        <img class="skill-code" src="./Images/skills-code.png" alt="skill-image">
         <h3>Design & Development</h3>
-        <p class="skill-text">My journey started when I was really young, due to my passion for games since I was little.</p>
-        <p class="skill-text">It was the thing that made me get into Game Development, and, later on, Web Development.</p>
+        <p class="skill-text">My journey started when I was really young, due to my passion for games since I was little. It was the thing that made me get into Game Development, and, later on, Web Development.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-image" src="./Images/skills-video-editing.png" alt="skill-image">
+        <img class="skill-video-editing" src="./Images/skills-video-editing.png" alt="skill-image">
         <h3>Photo & Video Editing</h3>
         <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effects, Photoshop and more.</p>
       </div>
     </div>
+    <div class="section-separator"></div>
   </div>
-    <div class="section-separator-container">
-        <div class="section-separator"></div>
-    </div>
     <div class="footer-area">
     <div class="contact-me">
       <h2 class="get-in-touch">Get In Touch</h2>
       <span class="contact-text">
       <h3>I am currently available for freelance work.</h3>
-      <p>If you have a project that you'd want to discuss about, or get in touch with me, you can do it below.</p>
+      <p>If you have a project that you'd want to discuss about, or want to get in touch with me, you can do it down below.</p>
       </span>
-      <a class="btn" href="mailto:denisilie2@gmail.com">CONTACT ME</a>
+      <a href="mailto:denisilie2@gmail.com"><img class="contact-icon" src="./Images/contact-icon.png" alt="contact-icon"></a>
     </div>
 
 
     <div class="bottom-container">
-    <a class="footer-link" href="https://github.com/denissuu">Github</a>
-    <a class="footer-link" href="https://www.instagram.com/deniss.ilie">Instagram</a>
-    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob">Steam</a>
+    <a class="footer-link" href="https://github.com/denissuu" target="_blank"><img class="footer-icon" src="./Images/github_icon.png" alt="github-icon"></a>
+    <a class="footer-link" href="https://www.instagram.com/deniss.ilie" target="_blank"><img class="footer-icon" src="./Images/instagram_icon.png" alt="instagram-icon"></a>
+    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob" target="_blank"><img class="footer-icon" src="./Images/steam_icon.png" alt="steam-icon"></a>
     <div class="copyright-text-container">
       <p class="copyright-text">© 2021 Denis Ilie</p>
     </div>
