--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@800&family=Sacramento&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
    </head>
   <body>
-  <div class="top-container">
+  <!-- <div class="top-container">
     <p class="top-container-text">
       Navigation Bar Coming Soon!
     </p>
-    <!-- <img class="top-cloud" src="./Images/cloud.png" alt="cloud-img"> -->
-    <!-- <h1>I'm Denis.</h1>
-    <p class="main-text-secondary">a <span class="web-underlined">web</span> developer.</p> -->
-    <!-- <img class="bottom-cloud" src="./Images/cloud.png" alt="cloud-img">
-    <img class="mountain-img"src="./Images/mountain.png" alt="mountain-img">
-    <img class="mountain-img-hidden"src="./Images/mountain.png" alt="mountain-img"> -->
-  </div>
+  </div> -->
   <div class="middle-container">
     <div class="profile">
       <img class="profile-picture"src="./Images/Denis_Profile.png" alt="Profile-Picture">
@@ -32,12 +26,12 @@
       <h2 class="my-skills-text">My Skills.</h2>
       <div class="skill-row">
         <img class="skill-code" src="./Images/skills-code.png" alt="skill-image">
-        <h3>Design & Development</h3>
-        <p class="skill-text">My journey started when I was really young, due to my passion for games since I was little. It was the thing that made me get into Game Development, and, later on, Web Development.</p>
+        <h3 class="skill-heading">Design & Development</h3>
+        <p class="skill-text">My journey started when I was a young gamer, it was the thing that made me get into Web Development.</p>
       </div>
       <div class="skill-row">
         <img class="skill-video-editing" src="./Images/skills-video-editing.png" alt="skill-image">
-        <h3>Photo & Video Editing</h3>
+        <h3 class="skill-heading">Photo & Video Editing</h3>
         <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effects, Photoshop and more.</p>
       </div>
     </div>
@@ -55,13 +49,12 @@
 
 
     <div class="bottom-container">
-    <a class="footer-link" href="https://github.com/denissuu" target="_blank"><img class="footer-icon" src="./Images/github_icon.png" alt="github-icon"></a>
-    <a class="footer-link" href="https://www.instagram.com/deniss.ilie" target="_blank"><img class="footer-icon" src="./Images/instagram_icon.png" alt="instagram-icon"></a>
-    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob" target="_blank"><img class="footer-icon" src="./Images/steam_icon.png" alt="steam-icon"></a>
+    <a class="footer-link" href="https://github.com/denissuu" target="_blank"><img class="footer-icon" src="./Images/github_icon.png" alt="github-icon"><span class="footer-text">Github</span></a>
+    <a class="footer-link" href="https://www.instagram.com/deniss.ilie" target="_blank"><img class="footer-icon" src="./Images/instagram_icon.png" alt="instagram-icon"><span class="footer-text">Instagram</span></a>
+    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob" target="_blank"><img class="footer-icon" src="./Images/steam_icon.png" alt="steam-icon"><span class="footer-text">Steam</span></a>
     <div class="copyright-text-container">
       <p class="copyright-text">© 2021 Denis Ilie</p>
     </div>
-    <!-- <img class="bottom-container-img" src="./Images/top-container-img.png" alt="background-image"> -->
   </div>
   </div>
   </body>
