--- a/index.html
+++ b/index.html
@@ -1,61 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Denis Ilie</title>
+
+    <!--    *** Bootstrap Importing ***-->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <!--    Website CSS and Bootstrap Overriding-->
+
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="./favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@800&family=Sacramento&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-   </head>
-  <body>
-  <!-- <div class="top-container">
-    <p class="top-container-text">
-      Navigation Bar Coming Soon!
-    </p>
-  </div> -->
-  <div class="middle-container">
-    <div class="profile">
-      <img class="profile-picture"src="./Images/Denis_Profile.png" alt="Profile-Picture">
-      <h2>Hello, I'm Denis.</h2>
-      <p>I am a Web Developer.I like making games and cycling.</p>
-    </div>
-    <div class="section-separator"></div>
-    <div class="skills">
-      <h2 class="my-skills-text">My Skills.</h2>
-      <div class="skill-row">
-        <img class="skill-code" src="./Images/skills-code.png" alt="skill-image">
-        <h3 class="skill-heading">Design & Development</h3>
-        <p class="skill-text">My journey started when I was a young gamer, it was the thing that made me get into Web Development.</p>
-      </div>
-      <div class="skill-row">
-        <img class="skill-video-editing" src="./Images/skills-video-editing.png" alt="skill-image">
-        <h3 class="skill-heading">Photo & Video Editing</h3>
-        <p class="skill-text">I have experience with various Software from Adobe, such as Premiere Pro, After Effects, Photoshop and more.</p>
-      </div>
-    </div>
-    <div class="section-separator"></div>
-  </div>
-    <div class="footer-area">
-    <div class="contact-me">
-      <h2 class="get-in-touch">Get In Touch</h2>
-      <span class="contact-text">
-      <h3>I am currently available for freelance work.</h3>
-      <p>If you have a project that you'd want to discuss about, or want to get in touch with me, you can do it down below.</p>
-      </span>
-      <a href="mailto:denisilie2@gmail.com"><img class="contact-icon" src="./Images/contact-icon.png" alt="contact-icon"></a>
-    </div>
+    <link rel="stylesheet" href="./css/bootstrap-overrides.css">
+
+    <link rel="icon" href="./faviconn.ico">
 
 
-    <div class="bottom-container">
-    <a class="footer-link" href="https://github.com/denissuu" target="_blank"><img class="footer-icon" src="./Images/github_icon.png" alt="github-icon"><span class="footer-text">Github</span></a>
-    <a class="footer-link" href="https://www.instagram.com/deniss.ilie" target="_blank"><img class="footer-icon" src="./Images/instagram_icon.png" alt="instagram-icon"><span class="footer-text">Instagram</span></a>
-    <a class="footer-link" href="https://www.steamcommunity.com/id/ItsYaBoyTheSniperNoob" target="_blank"><img class="footer-icon" src="./Images/steam_icon.png" alt="steam-icon"><span class="footer-text">Steam</span></a>
-    <div class="copyright-text-container">
-      <p class="copyright-text">© 2021 Denis Ilie</p>
+    <!--            Website Scripts-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="background-container">
+    <img src="./images/Triangles background.png">
+</div>
+
+<section class="navigation-area">
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">WORK</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
+
+<div class="welcome-section position-absolute top-50 start-50 translate-middle">
+    Hi there.
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <section class="socials-sidebar">
+                <a class="social-text" role="button">/ SOCIALS</a>
+            </section>
+        </div>
+        <!-- Vertical line on the website for the social media --->
+
+        <section class="main-headings-body">
+            <div class="col-6">
+                <div class="row main-heading-1">
+                    <p class="main-heading no-margins">/ 01 I'M DENIS</p>
+                    <p class="secondary-heading">A front-end web developer.</p>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row main-heading-2">
+                    <p class="main-heading">/ 02 MY WORK</p>
+                    <p class="secondary-heading">My previous projects.</p>
+                    <div class="button-container">
+                        <a class="main-button">/ CLICK HERE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row main-heading-3">
+                    <p class="main-heading">/ 03 GET IN TOUCH</p>
+                    <p class="secondary-heading">Interested in working with me?</p>
+                    <div class="button-container">
+                        <a class="main-button">/ CONTACT</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-  </div>
-  </div>
-  </body>
+<section class="footer-area">
+    <div class="col-6">
+        <div class="row">
+            <p class="footer-text">/ 2021 @ ALL RIGHTS RESERVED.</p>
+        </div>
+    </div>
+</section>
+</div>
+
+</body>
 </html>
