--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div class="background-container">
-    <img src="./images/Triangles background.png">
+    <img src="./Images/Triangles background.png">
 </div>
 
 <section class="navigation-area">
