--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Denis Ilie</title>
+    <title>Ilie Denis</title>
 
     <!--    *** Bootstrap Importing ***-->
 
@@ -22,14 +22,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
             crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a7daead6f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="background-container">
-    <img src="./Images/Triangles background.png">
-</div>
 
 <section class="navigation-area">
-    <nav class="navbar navbar-expand-sm navbar-dark">
+    <nav id="main-navbar" class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -39,13 +37,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="#acasa">ACASA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">WORK</a>
+                        <a class="nav-link" href="#proiecte">PROIECTE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -53,15 +51,19 @@
     </nav>
 </section>
 
+<!--<div data-bs-spy="scroll" data-bs-target="#main-navbar" data-bs-offset="0" class="scrollspy-navbar" tabindex="0">-->
+<!--</div>-->
+
+
 <div class="welcome-section position-absolute top-50 start-50 translate-middle">
-    Hi there.
+    Salut!
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid" id="acasa">
     <div class="row">
         <div class="col">
             <section class="socials-sidebar">
-                <a class="social-text" role="button">/ SOCIALS</a>
+                <a class="social-text" role="button" href="#socials">/ SOCIALS</a>
             </section>
         </div>
         <!-- Vertical line on the website for the social media --->
@@ -69,38 +71,152 @@
         <section class="main-headings-body">
             <div class="col-6">
                 <div class="row main-heading-1">
-                    <p class="main-heading no-margins">/ 01 I'M DENIS</p>
-                    <p class="secondary-heading">A front-end web developer.</p>
+                    <p class="main-heading no-margins">/ 01 SUNT DENIS</p>
+                    <p class="secondary-heading">Web Developer si Designer.</p>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row main-heading-2">
-                    <p class="main-heading">/ 02 MY WORK</p>
-                    <p class="secondary-heading">My previous projects.</p>
+                    <p class="main-heading">/ 02 PROIECTE</p>
+                    <p class="secondary-heading">Proiectele noastre anterioare.</p>
                     <div class="button-container">
-                        <a class="main-button">/ CLICK HERE</a>
+                        <a class="main-button" href="#proiecte">/ CLICK HERE</a>
                     </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row main-heading-3">
-                    <p class="main-heading">/ 03 GET IN TOUCH</p>
-                    <p class="secondary-heading">Interested in working with me?</p>
+                    <p class="main-heading">/ 03 CONTACT</p>
+                    <p class="secondary-heading">Interesat in a lucra cu noi?</p>
                     <div class="button-container">
-                        <a class="main-button">/ CONTACT</a>
+                        <a class="main-button" href="#contact">/ CLICK HERE</a>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-<section class="footer-area">
-    <div class="col-6">
-        <div class="row">
-            <p class="footer-text">/ 2021 @ ALL RIGHTS RESERVED.</p>
+</div>
+
+<section id="proiecte" class="projects-section">
+    <div class="row">
+        <p class="projects-text">/ 02 PROIECTE</p>
+    </div>
+    <div class="row">
+        <div class="carousel-container">
+            <div id="carousel-images">
+                <div id="carousel-target"
+                     class="carousel slide carousel-fade position-relative start-50 translate-middle box-shadow-effect"
+                     data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Images/Cloud_Hosting.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/Flash_Website.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/Sign_Up.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/Cloud_Hosting_Website.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/Music_Store.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-target"
+                            data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel-target"
+                            data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </section>
-</div>
+
+
+<section class="benefits-section">
+    <div class="row">
+        <p class="benefits-header">/ Beneficii</p>
+    </div>
+    <div class="row">
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
+            <i class="fas fa-eye image-benefits"></i>
+            <p class="benefits-text-title">Design Unic</p>
+            <p class="benefits-text">Design-urile noastre sunt concepute de la zero,<br> cu viziunea dumneavoastra
+                in minte.</p>
+        </div>
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
+            <i class="fas fa-cogs image-benefits"></i>
+            <p class="benefits-text-title">Solutii Diverse</p>
+            <p class="benefits-text">Site de prezentare? Nicio problema.<br> Magazin Online? Sigur. <br> Nevoi
+                personalizate? Contacteaza-ne!</p>
+        </div>
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
+            <i class="fas fa-wallet image-benefits"></i>
+            <p class="benefits-text-title">Preturi Accesibile</p>
+            <p class="benefits-text">Multitudinea noastra de pachete acopera orice tip de buget!</p>
+        </div>
+    </div>
+</section>
+
+<section class="contact-section">
+    <p class="contact-text" id="contact">/ 03 CONTACT</p>
+    <form class="form-area" action="https://formspree.io/f/xqknkrew"
+          method="POST">
+        <!-- Name input -->
+        <div class="form-outline mb-4">
+            <label class="form-label" for="inputName">Numele tau</label>
+            <input type="text" id="inputName" name="input_name" class="form-control" required />
+        </div>
+
+        <!-- Email input -->
+        <div class="form-outline mb-4">
+            <label class="form-label" for="inputEmail">Adresa de email</label>
+            <input type="email" id="inputEmail" name="input_email" class="form-control" required />
+        </div>
+
+        <!-- Message input -->
+        <div class="form-outline mb-4">
+            <label class="form-label" for="Message">Mesajul tau</label>
+            <textarea class="form-control" id="Message" rows="4" name="message" style="border-radius: 5px" required></textarea>
+        </div>
+
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-warning btn-block mb-4 form-button" style="width: 100%">Trimite</button>
+    </form>
+</section>
+
+<section class="footer-area">
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <a href="#acasa" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                    <i class="fas fa-code footer-logo"></i>
+                </a>
+                <span class="text-muted">© 2021 Ilie Denis</span>
+            </div>
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="socials">
+                <li class="ms-3"><a class="social-media" href="https://github.com/denissuu">
+                    <i class="fab fa-github"></i>
+                </a></li>
+                <li class="ms-3"><a class="social-media" href="https://www.instagram.com/deniss.ilie/">
+                    <i class="fab fa-instagram"></i>
+                </a></li>
+                <li class="ms-3"><a class="social-media" href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a></li>
+            </ul>
+        </footer>
+    </div>
+</section>
 
 </body>
 </html>
